# navigation-sdk

./: NEW_ARCHITECTURE.md  NEW_ARCHITECTURE_FIXES.md  README.md  package.json  react-native-navigation-sdk.podspec  react-native.config.js
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/google/android/react/navsdk/: NavigationSdkTurboPackage.java  RCTMapViewManager.java
cpp/: NavigationSdkCxxSpec.cpp  NavigationSdkCxxSpec.h
example/: package.json
example/ios/: Podfile
ios/react-native-navigation-sdk/: NavAutoEventDispatcherTurbo.h  NavAutoEventDispatcherTurbo.mm  NavAutoModuleTurbo.h  NavAutoModuleTurbo.mm  NavEventDispatcherTurbo.h  NavEventDispatcherTurbo.mm  NavModuleTurbo.h  NavModuleTurbo.mm  NavViewModuleTurbo.h  NavViewModuleTurbo.mm  RCTNavViewComponentView.h  RCTNavViewComponentView.mm  RCTNavViewManager.m  RNNavigationSdkComponentsProvider.h  RNNavigationSdkComponentsProvider.mm  RNNavigationSdkTurboModuleProvider.h  RNNavigationSdkTurboModuleProvider.mm
scripts/: addlicense.sh  format-java.sh  format-objc.sh
src/: index.ts
src/auto/: useNavigationAuto.ts
src/maps/mapView/: mapViewController.ts
src/navigation/navigation/: useNavigationController.ts
src/shared/: useModuleListeners.ts  viewManager.ts
src/specs/: NativeAutoEventDispatcher.ts  NativeComponents.ts  NativeEventDispatcher.ts  NativeModules.ts  NativeNavAutoModule.ts  NativeNavModule.ts  NativeNavViewModule.ts  RCTMapViewNativeComponent.ts  RCTNavViewDirect.ts  RCTNavViewNativeComponent.ts  index.ts
